[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/Rocketship_01.PNG" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Force_field.PNG" type="Texture" id=3]
[ext_resource path="res://Assets/Audio/Rocket_Tail.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 15.5739

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.217557, 0.645038 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 0.448242, 0, 1 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
pause_mode = 1
z_index = -3
collision_mask = 2
collision/safe_margin = 0.1
script = ExtResource( 2 )

[node name="Rocket_Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="Force_Field" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.686275 )
rotation = 0.785398
scale = Vector2( 2, 2 )
z_index = 1
texture = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="Force_Field"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Force_Field/StaticBody2D"]
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="Thruster_Particles" type="CPUParticles2D" parent="Sprite"]
show_behind_parent = true
position = Vector2( 0, 16 )
emitting = false
amount = 20
lifetime = 0.6
lifetime_randomness = 0.1
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector2( 0, 75 )
damping = 15.0
angle = 50.0
angle_random = 0.66
scale_amount = 2.0
scale_amount_random = 0.5
color_ramp = SubResource( 2 )

[node name="Main_Collider" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2( 0.9, 0.9 )
build_mode = 1
polygon = PoolVector2Array( -13.5, 16.5, 17.5, 9, 24, 0, 17.5, -9, -13.5, -16.5, -24, -6, -24, 6 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
gravity = 0.0
priority = 2.0
collision_mask = 2

[node name="Main_Collider_Copy" type="CollisionPolygon2D" parent="Area2D"]
build_mode = 1
polygon = PoolVector2Array( -13.5, 16.5, 17.5, 9, 24, 0, 17.5, -9, -13.5, -16.5, -24, -6, -24, 6 )
